Add payment archive code

--- a/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
+++ b/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
@@ -1,5 +1,22 @@
 <app-breadcrumbs title="BURSARY" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
-
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div><h5 class="card-title mb-0"><i class="ri-hand-coin-line text-muted fs-18 align-middle me-1">     </i>Cash Desk</h5></div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-primary" routerLink="/school/bursary/payment-archive"><i class="ri-history-line align-bottom me-1"></i> Payment History</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>  
+</div>
 <div class="row">
     <div class="col-xxl-6">
         <div class="card">
