rename payment history to transaction history

--- a/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
+++ b/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
@@ -46,7 +46,7 @@
                                                         <div ngbAccordionItem class="material-shadow" id="static-1">
                                                             <div ngbAccordionHeader
                                                                 class="accordion-header border-0 bg-transparent">
-                                                                <button ngbAccordionButton><i class="ri-history-line text-muted fs-18 align-middle me-1"></i> Payment History
+                                                                <button ngbAccordionButton><i class="ri-history-line text-muted fs-18 align-middle me-1"></i> Transaction History
                                                                 </button>
                                                             </div>
                                                             <div ngbAccordionCollapse>
