Add print receipt button

--- a/src/app/pages/school/bursary/payment-archive/payment-archive.component.html
+++ b/src/app/pages/school/bursary/payment-archive/payment-archive.component.html
@@ -10,6 +10,7 @@
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-secondary"><i class=" ri-printer-line align-bottom me-1"></i> Print Receipt</button>
                             <button type="button" class="btn btn-primary" routerLink="/school/bursary/cash-desk"><i class="ri-bank-card-line align-bottom me-1"></i> Make Payment</button>
                         </div>
                     </div>
